add recipe for hot chocolate

--- a/recipes/vegan-hot-chocolate.html
+++ b/recipes/vegan-hot-chocolate.html
@@ -9,9 +9,17 @@
 <body>
     <h1>Vegan Hot Chocolate</h1>
     <img src="../assets/images/hot-coco.jpeg" alt="hot chololate in a cup">
-    <h2>
+    <h3>
         Description
-    </h2>
+    </h3>
     <p>This is an easy recipe for vegan hot cholocate to keep you warm in the winter. It requires minimal ingredients and effort so there's less making and more sipping! </p>
+    <h3>Ingredients</h3>
+    <ul>
+        <li>1 cup water</li>
+        <li>1/4 cup white sugar</li>
+        <li>1/4 cup unsweetened cocoa powder</li>
+        <li>3 cups soy milk</li>
+    </ul>
 </body>
 </html>
+
