add steps/directions for hot cholocate

--- a/recipes/vegan-hot-chocolate.html
+++ b/recipes/vegan-hot-chocolate.html
@@ -13,13 +13,19 @@
         Description
     </h3>
     <p>This is an easy recipe for vegan hot cholocate to keep you warm in the winter. It requires minimal ingredients and effort so there's less making and more sipping! </p>
-    <h3>Ingredients</h3>
+    <h3>Ingredients:</h3>
     <ul>
         <li>1 cup water</li>
         <li>1/4 cup white sugar</li>
         <li>1/4 cup unsweetened cocoa powder</li>
         <li>3 cups soy milk</li>
     </ul>
+    <h3>Steps:</h3>
+    <ol>
+        <li>Bring water, sugar, and cocoa to a boil in a small saucepan.</li>
+        <li>Pour in soy milk and stir until combined and heated through, about 3 minutes.</li>
+        <li>Pour in cup of your choice and enjoy the hot deliciousness!</li>
+    </ol>
 </body>
 </html>
 
