add ingredient list to stir fry

--- a/recipes/vegan-stir-fry.html
+++ b/recipes/vegan-stir-fry.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vegan Hot Chololate</title>
+    <title>Buddha's Delight Vegan Stir-Fry</title>
 </head>
 <body>
-    <h1>Vegan Hot Chocolate</h1>
+    <h1>Buddha's Delight Vegan Stir-Fry</h1>
     <img src="../assets/images/hot-coco.jpeg" alt="hot chololate in a cup">
     <h3>
         Description
@@ -15,10 +15,31 @@
     <p>Buddha's Delight or Lo Han Jai is the ultimate vegan stir-fry with delicate flavors and wholesome goodness! Serve with rice.</p>
     <h3>Ingredients:</h3>
     <ul>
-        <li>1 cup water</li>
-        <li>1/4 cup white sugar</li>
-        <li>1/4 cup unsweetened cocoa powder</li>
-        <li>3 cups soy milk</li>
+        <li>2 cups water</li>
+        <li>2 fermented bean curd blocks (Optional)</li>
+        <li>3 tablespoons vegetarian mushroom oyster sauce</li>
+        <li>1 teaspoon mushroom seasoning</li>
+        <li>½ teaspoon salt</li>
+        <li>½ teaspoon cornstarch</li>
+        <li>½ teaspoon sesame oil</li>
+        <li>½ teaspoon white sugar</li>
+        <li>ground black pepper to taste</li>
+        <li>1 tablespoon vegetable oil</li>
+        <li>2 (1/2 inch) pieces fresh ginger, peeled and thinly sliced</li>
+        <li>4 ounces fried tofu, cut into 4 pieces</li>
+        <li>2 ounces lotus root, peeled and thinly sliced</li>
+        <li>2 ounces ginkgo nuts</li>
+        <li>1 ounce dried lily flowers, soaked in hot water</li>
+        <li>8 dried red dates</li>
+        <li>5 fresh shiitake mushrooms, diced</li>
+        <li>1 carrot, sliced</li>
+        <li>7 ounces napa cabbage, cut into small pieces</li>
+        <li>2 ounces snow peas</li>
+        <li>2 ounces fresh black fungus</li>
+        <li>1 (2 ounce) package cellophane noodles</li>
+        <li>1 tablespoon goji berries, soaked in water</li>
+        <li>½ teaspoon salt</li>
+        <li>1 ounce dried black moss (nostoc), rehydrated</li>
     </ul>
     <h3>Steps:</h3>
     <ol>
