--- a/recipes/vegan-stir-fry.html
+++ b/recipes/vegan-stir-fry.html
@@ -8,45 +8,50 @@
 </head>
 <body>
     <h1>Buddha's Delight Vegan Stir-Fry</h1>
-    <img src="../assets/images/hot-coco.jpeg" alt="hot chololate in a cup">
+    <img src="../assets/images/stir-fry.jpeg" alt="Buddha's delight stir fry in a bowl">
     <h3>
         Description
     </h3>
     <p>Buddha's Delight or Lo Han Jai is the ultimate vegan stir-fry with delicate flavors and wholesome goodness! Serve with rice.</p>
     <h3>Ingredients:</h3>
-    <ul>
-        <li>2 cups water</li>
-        <li>2 fermented bean curd blocks (Optional)</li>
-        <li>3 tablespoons vegetarian mushroom oyster sauce</li>
-        <li>1 teaspoon mushroom seasoning</li>
-        <li>½ teaspoon salt</li>
-        <li>½ teaspoon cornstarch</li>
-        <li>½ teaspoon sesame oil</li>
-        <li>½ teaspoon white sugar</li>
-        <li>ground black pepper to taste</li>
-        <li>1 tablespoon vegetable oil</li>
-        <li>2 (1/2 inch) pieces fresh ginger, peeled and thinly sliced</li>
-        <li>4 ounces fried tofu, cut into 4 pieces</li>
-        <li>2 ounces lotus root, peeled and thinly sliced</li>
-        <li>2 ounces ginkgo nuts</li>
-        <li>1 ounce dried lily flowers, soaked in hot water</li>
-        <li>8 dried red dates</li>
-        <li>5 fresh shiitake mushrooms, diced</li>
-        <li>1 carrot, sliced</li>
-        <li>7 ounces napa cabbage, cut into small pieces</li>
-        <li>2 ounces snow peas</li>
-        <li>2 ounces fresh black fungus</li>
-        <li>1 (2 ounce) package cellophane noodles</li>
-        <li>1 tablespoon goji berries, soaked in water</li>
-        <li>½ teaspoon salt</li>
-        <li>1 ounce dried black moss (nostoc), rehydrated</li>
-    </ul>
+        <ul>
+            <li>2 cups water</li>
+            <li>2 fermented bean curd blocks (Optional)</li>
+            <li>3 tablespoons vegetarian mushroom oyster sauce</li>
+            <li>1 teaspoon mushroom seasoning</li>
+            <li>½ teaspoon salt</li>
+            <li>½ teaspoon cornstarch</li>
+            <li>½ teaspoon sesame oil</li>
+            <li>½ teaspoon white sugar</li>
+            <li>ground black pepper to taste</li>
+            <li>1 tablespoon vegetable oil</li>
+            <li>2 (1/2 inch) pieces fresh ginger, peeled and thinly sliced</li>
+            <li>4 ounces fried tofu, cut into 4 pieces</li>
+            <li>2 ounces lotus root, peeled and thinly sliced</li>
+            <li>2 ounces ginkgo nuts</li>
+            <li>1 ounce dried lily flowers, soaked in hot water</li>
+            <li>8 dried red dates</li>
+            <li>5 fresh shiitake mushrooms, diced</li>
+            <li>1 carrot, sliced</li>
+            <li>7 ounces napa cabbage, cut into small pieces</li>
+            <li>2 ounces snow peas</li>
+            <li>2 ounces fresh black fungus</li>
+            <li>1 (2 ounce) package cellophane noodles</li>
+            <li>1 tablespoon goji berries, soaked in water</li>
+            <li>½ teaspoon salt</li>
+            <li>1 ounce dried black moss (nostoc), rehydrated</li>
+        </ul>
     <h3>Steps:</h3>
-    <ol>
-        <li>Bring water, sugar, and cocoa to a boil in a small saucepan.</li>
-        <li>Pour in soy milk and stir until combined and heated through, about 3 minutes.</li>
-        <li>Pour in cup of your choice and enjoy the hot deliciousness!</li>
-    </ol>
+        <ol>
+            <li>Mix water, fermented tofu blocks, oyster sauce, mushroom seasoning, 1/2 teaspoon salt, cornstarch, sesame oil, white sugar, and pepper together in a bowl until fermented tofu has dissolved.</li>
+            <li>Cook vegetable oil and ginger in a skillet over medium heat for 30 seconds. </li>
+            <li>Add tofu, lotus root, ginkgo nuts, lily flowers, red dates, shiitake mushrooms, and carrot.</li>
+            <li>Cook until golden brown, about 5 minutes. Add cabbage, snow peas, black fungus, noodles, goji berries, and salt.</li>
+            <li>Cook for another 3 minutes.</li>
+            <li>Add moss and fermented tofu mixture; bring to a boil.</li>
+            <li>Remove from heat and transfer to a serving dish.</li>
+            <li>Enjoy your delicious meal!</li>
+        </ol> 
 </body>
 </html>
 
