add credit to recipes and images

--- a/recipes/vegan-hot-chocolate.html
+++ b/recipes/vegan-hot-chocolate.html
@@ -13,6 +13,7 @@
         Description
     </h3>
     <p>This is an easy recipe for vegan hot cholocate to keep you warm in the winter. It requires minimal ingredients and effort so there's less making and more sipping! </p>
+    <p><a href="https://www.allrecipes.com/recipe/260765/easy-vegan-hot-chocolate/">Recipe Credit</a></p>
     <h3>Ingredients:</h3>
     <ul>
         <li>1 cup water</li>
