--- a/recipes/vegan-stir-fry.html
+++ b/recipes/vegan-stir-fry.html
@@ -13,6 +13,7 @@
         Description
     </h3>
     <p>Buddha's Delight or Lo Han Jai is the ultimate vegan stir-fry with delicate flavors and wholesome goodness! Serve with rice.</p>
+    <p><a href="https://www.allrecipes.com/recipe/261717/buddhas-delight-vegan-stir-fry/">Recipe Credit</a></p>
     <h3>Ingredients:</h3>
         <ul>
             <li>2 cups water</li>
