--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1>Odin Recipes</h1>
     <ul>
         <li><a href="./recipes/vegan-hot-chocolate.html">Vegan Hot Chololate</a></li>
+        <li><a href="./recipes/vegan-stir-fry.html">Buddha's Delight Vegan Stir Fry</a></li>
     </ul>
 </body>
 </html>
