add cake image and ingredients to recipe

--- a/recipes/vegan-devil-food-cake.html
+++ b/recipes/vegan-devil-food-cake.html
@@ -8,39 +8,23 @@
 </head>
 <body>
     <h1>Vegan Devil's Food Cake</h1>
-    <img src="../assets/images/stir-fry.jpeg" alt="Buddha's delight stir fry in a bowl">
+    <img src="../assets/images/vegan-devil's-food-cake.jpeg" alt="delicious devil chocolate cake">
     <h3>
         Description
     </h3>
-    <p>Buddha's Delight or Lo Han Jai is the ultimate vegan stir-fry with delicate flavors and wholesome goodness! Serve with rice.</p>
-    <p><a href="https://www.allrecipes.com/recipe/261717/buddhas-delight-vegan-stir-fry/">Recipe Credit</a></p>
+    <p>Everyone in my family, vegan and non-vegan, loves this cake! Frost with vegan buttercream or icing if desired.</p>
+    <p><a href="https://www.allrecipes.com/recipe/245740/vegan-devils-food-cake/">Recipe Credit</a></p>
     <h3>Ingredients:</h3>
         <ul>
-            <li>2 cups water</li>
-            <li>2 fermented bean curd blocks (Optional)</li>
-            <li>3 tablespoons vegetarian mushroom oyster sauce</li>
-            <li>1 teaspoon mushroom seasoning</li>
+            <li>6 ounces unsweetened chocolate, chopped</li>
+            <li>3 cups cake flour</li>
+            <li>2 teaspoons baking soda</li>
             <li>½ teaspoon salt</li>
-            <li>½ teaspoon cornstarch</li>
-            <li>½ teaspoon sesame oil</li>
-            <li>½ teaspoon white sugar</li>
-            <li>ground black pepper to taste</li>
-            <li>1 tablespoon vegetable oil</li>
-            <li>2 (1/2 inch) pieces fresh ginger, peeled and thinly sliced</li>
-            <li>4 ounces fried tofu, cut into 4 pieces</li>
-            <li>2 ounces lotus root, peeled and thinly sliced</li>
-            <li>2 ounces ginkgo nuts</li>
-            <li>1 ounce dried lily flowers, soaked in hot water</li>
-            <li>8 dried red dates</li>
-            <li>5 fresh shiitake mushrooms, diced</li>
-            <li>1 carrot, sliced</li>
-            <li>7 ounces napa cabbage, cut into small pieces</li>
-            <li>2 ounces snow peas</li>
-            <li>2 ounces fresh black fungus</li>
-            <li>1 (2 ounce) package cellophane noodles</li>
-            <li>1 tablespoon goji berries, soaked in water</li>
-            <li>½ teaspoon salt</li>
-            <li>1 ounce dried black moss (nostoc), rehydrated</li>
+            <li>2 cups white sugar</li>
+            <li>1 ¾ cups water</li>
+            <li>⅔ cup vegetable oil</li>
+            <li>2 teaspoons vanilla extract</li>
+            <li>1 teaspoon balsamic vinegar</li>
         </ul>
     <h3>Steps:</h3>
         <ol>
