--- a/recipes/vegan-devil-food-cake.html
+++ b/recipes/vegan-devil-food-cake.html
@@ -12,7 +12,7 @@
     <h3>
         Description
     </h3>
-    <p>Everyone in my family, vegan and non-vegan, loves this cake! Frost with vegan buttercream or icing if desired.</p>
+    <p>Whether you're a vegan or non-vegan, you will definitely love this cake! Frost with vegan buttercream or icing if desired.</p>
     <p><a href="https://www.allrecipes.com/recipe/245740/vegan-devils-food-cake/">Recipe Credit</a></p>
     <h3>Ingredients:</h3>
         <ul>
@@ -21,21 +21,18 @@
             <li>2 teaspoons baking soda</li>
             <li>½ teaspoon salt</li>
             <li>2 cups white sugar</li>
-            <li>1 ¾ cups water</li>
+            <li>1¾ cups water</li>
             <li>⅔ cup vegetable oil</li>
             <li>2 teaspoons vanilla extract</li>
             <li>1 teaspoon balsamic vinegar</li>
         </ul>
     <h3>Steps:</h3>
         <ol>
-            <li>Mix water, fermented tofu blocks, oyster sauce, mushroom seasoning, 1/2 teaspoon salt, cornstarch, sesame oil, white sugar, and pepper together in a bowl until fermented tofu has dissolved.</li>
-            <li>Cook vegetable oil and ginger in a skillet over medium heat for 30 seconds. </li>
-            <li>Add tofu, lotus root, ginkgo nuts, lily flowers, red dates, shiitake mushrooms, and carrot.</li>
-            <li>Cook until golden brown, about 5 minutes. Add cabbage, snow peas, black fungus, noodles, goji berries, and salt.</li>
-            <li>Cook for another 3 minutes.</li>
-            <li>Add moss and fermented tofu mixture; bring to a boil.</li>
-            <li>Remove from heat and transfer to a serving dish.</li>
-            <li>Enjoy your delicious meal!</li>
+            <li>Melt unsweetened chocolate in top of a double boiler over simmering water, stirring frequently and scraping down the sides with a rubber spatula to avoid scorching. Set aside to cool slightly, about 5 minutes.</li>
+            <li>Preheat oven to 350 degrees F (175 degrees C). Line two 9-inch cake pans with waxed paper.</li>
+            <li>Sift cake flour, baking soda, and salt together in a large bowl.</li>
+            <li>Whisk sugar, water, vegetable oil, vanilla extract, and balsamic vinegar in a large bowl until well-combined. Stir in half of the sifted flour mixture. Fold in melted chocolate. Stir in remaining sifted flour mixture. Beat with an electric mixer on medium speed until batter is smooth, about 2 minutes. Divide batter between cake pans.</li>
+            <li>Bake in the preheated oven until toothpicks inserted in the centers come out clean, about 45 minutes. Cool in the pans, 5 minutes. Invert cakes onto wire rack and let cool completely before frosting, about 1 hour.</li>
         </ol> 
 </body>
 </html>
