add image and links to recipe in main html

--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
     <title>Recipes</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1>Odin Vegan Recipes</h1>
+    <img src="../odin-recipes/assets/images/earth-happy.jpeg" alt="Happy and smiling earth" width="500" height="500"/>
+    <p>Who says that vegan meals don't have to be delicious? Follow along the recipes below for a treat! Start by enjoying some soy hot cholocolate. Then enjoy an awesome vegan stir fry classic. Then finish your meal with amazing chocolate cake that the devil's jealous of!</p>
     <ul>
         <li><a href="./recipes/vegan-hot-chocolate.html">Vegan Hot Chololate</a></li>
         <li><a href="./recipes/vegan-stir-fry.html">Buddha's Delight Vegan Stir Fry</a></li>
+        <li><a href="./recipes/vegan-devil-food-cake.html">Vegan Devil's Food Cake</a></li>
     </ul>
 </body>
 </html>
