add a return home link to all recipe html

--- a/recipes/vegan-hot-chocolate.html
+++ b/recipes/vegan-hot-chocolate.html
@@ -27,6 +27,7 @@
         <li>Pour in soy milk and stir until combined and heated through, about 3 minutes.</li>
         <li>Pour in cup of your choice and enjoy the hot deliciousness!</li>
     </ol>
+    <a href="../index.html">Return Home</a>
 </body>
 </html>
 
