--- a/recipes/vegan-stir-fry.html
+++ b/recipes/vegan-stir-fry.html
@@ -53,6 +53,7 @@
             <li>Remove from heat and transfer to a serving dish.</li>
             <li>Enjoy your delicious meal!</li>
         </ol> 
+    <a href="../index.html">Return Home</a>
 </body>
 </html>
 
