--- a/recipes/vegan-devil-food-cake.html
+++ b/recipes/vegan-devil-food-cake.html
@@ -34,6 +34,7 @@
             <li>Whisk sugar, water, vegetable oil, vanilla extract, and balsamic vinegar in a large bowl until well-combined. Stir in half of the sifted flour mixture. Fold in melted chocolate. Stir in remaining sifted flour mixture. Beat with an electric mixer on medium speed until batter is smooth, about 2 minutes. Divide batter between cake pans.</li>
             <li>Bake in the preheated oven until toothpicks inserted in the centers come out clean, about 45 minutes. Cool in the pans, 5 minutes. Invert cakes onto wire rack and let cool completely before frosting, about 1 hour.</li>
         </ol> 
+    <a href="../index.html">Return Home</a>
 </body>
 </html>
 
